Xong src cho Service-based IL và Tiếp tục viết bash scripts